--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8" />
+  <script src="bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
   <script src="js/app.js" charset="utf-8"></script>
   <title>TicTacToe</title>
 </head>
 <body>
   <div id = "gameboard">
     <div class="row">
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
+      <div class="square bottom right"></div>
+      <div class="square bottom right"></div>
+      <div class="square bottom"></div>
     </div>
     <div class="row">
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
+      <div class="square bottom right"></div>
+      <div class="square bottom right"></div>
+      <div class="square bottom"></div>
     </div>
     <div class="row">
-      <div class="square"></div>
-      <div class="square"></div>
+      <div class="square right"></div>
+      <div class="square right"></div>
       <div class="square"></div>
     </div>
   </div>
